@@ -342,12 +342,22 @@ class TestEnumerable < Test::Unit::TestCase
     ary = []
     (1..10).each_slice(3) {|a| ary << a}
     assert_equal([[1, 2, 3], [4, 5, 6], [7, 8, 9], [10]], ary)
+
+    bug9749 = '[ruby-core:62060] [Bug #9749]'
+    ary.clear
+    (1..10).each_slice(3, &lambda {|a, *| ary << a})
+    assert_equal([[1, 2, 3], [4, 5, 6], [7, 8, 9], [10]], ary, bug9749)
   end
 
   def test_each_cons
     ary = []
     (1..5).each_cons(3) {|a| ary << a}
     assert_equal([[1, 2, 3], [2, 3, 4], [3, 4, 5]], ary)
+
+    bug9749 = '[ruby-core:62060] [Bug #9749]'
+    ary.clear
+    (1..5).each_cons(3, &lambda {|a, *| ary << a})
+    assert_equal([[1, 2, 3], [2, 3, 4], [3, 4, 5]], ary, bug9749)
   end
 
   def test_zip
